Part1/ex1-9/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 8000
