Part1/ex1-9/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 3456
      - path: /
        pathType: Exact
        backend:
          service:
            name: log-output-endpoint-svc
            port:
              number: 2345
